# sync-dir

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  fixture.text  install.sh  sync-dir.service
.circleci/: config.yml
src/: config.rs  difference.rs  history.rs  logger.rs  main.rs  server.rs
