[package]
name = "sync-dir"
version = "0.0.1"
authors = ["Shinichi Kogai <kogai0121@gmail.com>"]

[dependencies]
regex = "*"
im = { version = "10.0.0", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "2.31.2"
log = "0.4"
toml = "0.4"
libudev = "0.2"

[features]
default = []
debug = []
