[package]
name = "sync-dir"
version = "0.1.7"
authors = ["Shinichi Kogai <kogai0121@gmail.com>"]

[dependencies]
regex = "*"
log = "0.4"
log4rs = "0.8.0"
log4rs-syslog = "3.0"
im = { version = "10.0.0", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "2.31.2"
toml = "0.4"
libusb = "0.3"
termion = "1.0"

[features]
default = []
debug = []
